feat: add complete order endpoint
